Fix navbar behind images bug

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -12,6 +12,7 @@
   width: 100%;
   background-color: rgba(0, 0, 0, 0.0);
   backdrop-filter: blur(5px);
+  z-index: 1;
 }
 
 .letter {
